# models-ocr-pepline

./: .env.example  .gitignore  RAPORT_PROJEKTU.md  README.md  async_receipt_pipeline.py  benchmark_comparison.md  benchmark_results.md  checklist_perplexica.md  pyproject.toml  read_header.py  receipt_bridge.py  reindex.sh  requirements.txt  run_brain.sh  setup_weekly_backup.sh  start_guard.sh  test_batch_speedup.py  test_parallel_indexing.py  test_rag_cache.py  test_spaced_repetition.py  verify_extraction.py
.claude/: settings.local.json
adapters/: __init__.py
adapters/google/: __init__.py  auth_drive.py  auth_gmail.py  calendar_adapter.py  drive_adapter.py  gemini_adapter.py  gmail_adapter.py  keep_adapter.py  keep_api_adapter.py
adapters/obsidian/: action_processor.py  note_generator.py  vault_manager.py  view_generator.py
benchmarking/: .env.example  QUICKSTART.md  README.md  ocr_benchmark_engine.py  requirements.txt  run_benchmark.py  setup_test_data.py
benchmarks/: benchmark_compare.py  debugging_report.md
benchmarks/images/: 24002009862025112573350 (1).deepseek.json  24002009862025112573350 (1).txt  24002009862026010579846 (1).txt  (+15 more)
config/: __init__.py  config.py  product_taxonomy.json  prompts.yaml  routing.yaml  tags.yaml  user_preferences.yaml
core/: __init__.py  ocr_service.py
data.backup.20260116/: pantry.json  receipt_cache.json  receipt_cache.json.backup  tasks.json
scripts/: benchmark_all.py  benchmark_ollama.py  benchmark_receipts.py  debug_login.py  sync_keep.py  verify_deepseek_pipeline.py  verify_polish_models.py  verify_youtube.py
tests/: conftest.py  test_async_receipt.py  test_taxonomy.py
utils/: receipt_cache.py  taxonomy.py
(+33 files in other folders)
